# nail-segmentation-label-outliner

./: .gitignore  color_test.py  main.py  pyproject.toml
analyze/: 00ae248e7b.json
assets/: sample.json
