[tool.poetry]
name = "gt-studio-to-pixellib"
version = "0.1.0"
description = ""
authors = ["ptmdmusique <ptmdmusic@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.4.3"
numpy = "^1.21.2"
opencv-python = "^4.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
